[tool.poetry]
name = "pan21"
version = "0.1.0"
description = ""
authors = ["ChrisBagdon <chrisbagdon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
jupyter = "^1.0.0"
scikit-learn = "^0.24.2"
nltk = "^3.6.2"
emoji = "^1.2.0"
simpletransformers = "^0.61.4"
matplotlib = "^3.4.2"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.8.1+cu111 torchvision==0.9.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
